# disproid

./: .gitignore  Package.swift  README.md  THIRD_PARTY_NOTICES.md
.build/: build.db  debug.yaml
.build/arm64-apple-macosx/debug/: disproid  plugin-tools-description.json
.build/arm64-apple-macosx/debug/CGVirtualDisplayInterface.build/: shim.m.d
.build/arm64-apple-macosx/debug/ModuleCache/33DTAAEA6832L/: CFNetwork-1PNPO1ORVQZLS.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreServices-39NCTJOEW7PQ2.pcm  Darwin-1FXX23EKWOBA9.pcm  modules.idx  (+25 more)
.build/arm64-apple-macosx/debug/Modules/: disproid.swiftdoc  disproid.swiftmodule  disproid.swiftsourceinfo
.build/arm64-apple-macosx/debug/disproid.build/: Options.d  Options.swiftdeps  VirtualDisplay.d  VirtualDisplay.swiftdeps  disproid.emit-module.d  main.d  main.swiftdeps  master.priors  output-file-map.json  sources
.build/arm64-apple-macosx/debug/disproid.product/: Objects.LinkFileList
.github/workflows/: release.yml
Sources/CGVirtualDisplayInterface/include/: CGVirtualDisplayInterface.h  module.modulemap
Sources/disproid/: main.swift
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.c
android/app/src/main/cpp/airplay/: dnssd_android.c  global.h
android/gradle/wrapper/: gradle-wrapper.properties
android/native-deps/: build-openssl-android.sh
mac/: .gitignore  Info.plist  Package.swift  README.md  make-app.sh  make-cert.sh
mac/Sources/CGVirtualDisplayInterface/: shim.m
mac/Sources/aoaprobe/: main.swift
mac/Sources/disproid-helper/: AdbBridge.swift  AoaTransport.swift  App.swift  FrameServer.swift  Options.swift  ScreenCapturer.swift  StreamEngine.swift  VideoEncoder.swift  VideoTransport.swift  VirtualDisplay.swift  main.swift
(+146 files in other folders)
